[workspace]
members = [
    "./macro_puzzle",
    "./vimba_rs",
    "./actix_benchmark",
    "./actix_actor",
    "./actix_system_service",
    "./practice_rust",
    "./cxx_poc",
    "./configuration_poc",
    "./rust_reference",
    "./rust_cookbook",
    "./mmap_demo",
    "./echo_command",
    "./memory_management_ffi",
    "./non-generic-inner-function",
    "./mutually-exclusive-trait",
    "./actix_double_free",
    "./trait_bound",
    "./tokio_poc",
]
exclude = [
    "./rpmsg_async_notify"
]
