[package]
name = "configuration_poc"
version = "0.1.0"
authors = ["siliang <szhang@endiag.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
lazy_static = "1.4"
serde = {version = "1.0", features=["derive"]}