[package]
name = "rpmsg_async_notify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.23"
snafu = "0.6.10"
log = "0.4.14"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"]}
cpu-time = "1.0.0"
lazy_static = "1.4.0"
signal-hook = "0.3.13"
crossbeam = "0.8"